// ============================================
// Blogging Platform - Database Schema (DBML)
// Normalized to 3NF
// ============================================

// ---- USERS ----
Table users {
  id bigint [pk, increment]
  username varchar(50) [unique, not null]
  email varchar(100) [unique, not null]
  password varchar(255) [not null, note: 'Hashed password']
  role varchar(20) [not null, default: 'READER', note: 'BLOGGER or READER']
  bio text
  profile_image varchar(255)
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    username
    email
  }
}

// ---- POSTS ----
Table posts {
  id bigint [pk, increment]
  author_id bigint [not null, ref: > users.id]
  title varchar(255) [not null]
  content text [not null]
  status varchar(20) [not null, default: 'DRAFT', note: 'DRAFT, PUBLISHED, or ARCHIVED']
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  published_at timestamp [note: 'Set when status changes to PUBLISHED']

  indexes {
    author_id
    title
    status
    created_at
  }
}

// ---- COMMENTS ----
Table comments {
  id bigint [pk, increment]
  post_id bigint [not null, ref: > posts.id]
  user_id bigint [not null, ref: > users.id]
  content text [not null]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    post_id
    user_id
  }
}

// ---- TAGS ----
Table tags {
  id bigint [pk, increment]
  name varchar(50) [unique, not null]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    name
  }
}

// ---- POST_TAGS (Join Table) ----
Table post_tags {
  post_id bigint [not null, ref: > posts.id]
  tag_id bigint [not null, ref: > tags.id]

  indexes {
    (post_id, tag_id) [pk]
    tag_id
  }
}

// ---- REVIEWS ----
Table reviews {
  id bigint [pk, increment]
  post_id bigint [not null, ref: > posts.id]
  user_id bigint [not null, ref: > users.id]
  rating int [not null, note: '1 to 5 star rating']
  content text [note: 'Optional review text']
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    post_id
    user_id
    (post_id, user_id) [unique, note: 'One review per user per post']
  }
}
